# OpenCV320Simple

OpenCVLibrary320/: build.gradle
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/org/opencv/samples/facedetect/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: native-lib.cpp
app/src/main/java/org/opencv/samples/facedetect/: DetectionBasedTracker.java  FdActivity.java  MainActivity.java
app/src/main/res/layout/: face_detect_surface_view.xml
app/src/main/res/values/: strings.xml
